Fixed the z-index weirdness with the popup windows

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ nav {
 	width: 100%;
 	height: 100%;
 	opacity: 0;
-	z-index: 10;
+	z-index: -1;
 	pointer-events: none;
 
 	display: flex;
